--- a/exos_chimie_1_TS_utf8.tex
+++ b/exos_chimie_1_TS_utf8.tex
@@ -1,11 +1,14 @@
 \input{entete_exos_TS} 
-%mdif
-%modif2
 
 \begin{document}
 \fiche{Chimie}{Terminale S en \the\year}{Quelques incontournables}
 Les masses molaires sont à chercher dans le livre, les substances utilisées dans ces exercices sont très courantes, vous devez connaître leurs noms ainsi que leurs formules. Reportez vous au cours ou au TP en cas d'oubli.\\
-\exo 
+\exo Couples redox
+\begin{enumerate}
+\item Ecrire les demi équations électroniques pour les couples suivants: $H^+/H_2$, $I_2/I^-$, $MnO_4^-/Mn^{2+}$, $S_2O_3^{2-}/S_4O_6^{2-}$
+\item On fait réagit  du diiode $I_2$ sur les ions thiosulfate. Ecrire l'équation chimique de la réaction.
+\item  On fait réagit des ions fer $Fe^{2+}$ sur des ions permanganate. Ecrire l'équation chimique de la réaction. $Fe^{2+}$ appartient au couple $Fe^{3+}/Fe^{2+}$.
+\end{enumerate}
 \exo Calcul de quantité de matière
 \begin{enumerate}
 \item Soit une quantité d'eau de n=0,068 mol. Calculer la masse d'eau correspondante et le nombre de molécules d'eau dans cet échantillon.
@@ -39,7 +42,7 @@ On souhaite préparer 50 mL d'une solution de sulfate de sodium ($Na_2SO_4$) à 
 Dilution \emph{bis}
 \\
 On dispose d'une solution de sulfate de cuivre à $\SI{0.20}{mol/L}$. Donner un protocole expérimental permettant de préparer 50 mL de solution de sulfate de cuivre à $\SI{2.0e-2}{mol/L}$.
-
+\newpage
 \exo Transformation chimique et quantité de matière.
 La combustion du carbone dans le dioxygène produit uniquement du dioxyde de carbone. L'équation chimique décrivant cette combustion est $$C+O_2\longrightarrow CO_2$$
 
