--- a/exos_chimie_1_TS_utf8.tex
+++ b/exos_chimie_1_TS_utf8.tex
@@ -1,5 +1,5 @@
 \input{entete_exos_TS} 
-
+%cthit modif
 \begin{document}
 \fiche{Chimie}{Terminale S en \the\year}{Quelques incontournables}
 Les masses molaires sont à chercher dans le livre, les substances utilisées dans ces exercices sont très courantes, vous devez connaître leurs noms ainsi que leurs formules. Reportez vous au cours ou au TP en cas d'oubli.\\
